Fix layout break

--- a/BTVN/Module1/Lession4/style.css
+++ b/BTVN/Module1/Lession4/style.css
@@ -38,7 +38,7 @@
 
 /* Slide */
 .slide img {
-  width: 100vw;
+  width: 100%;
   height: 40vh;
   object-fit: cover;
 }
